# Directional

include/directional/: FunctionMesh.h
tutorial/: CMakeCache.txt  CMakeLists.txt  tutorial_shared_path.h
tutorial/203_Combing/: CMakeLists.txt  main_new.cpp
tutorial/301_PowerFields/: CMakeLists.txt  main_new.cpp
tutorial/501_SeamlessIntegration/: CMakeLists.txt  main_new.cpp
tutorial/505_Meshing/: CMakeLists.txt  main.cpp  main_new.cpp  quad_layout.cpp
tutorial/shared/: aqua-center-generated.off  fandisk.rawfield  rocker-arm2500.rawfield
